# cloudwatch-viewer-web-api

./: Cargo.toml  api_schema.yml
src/: app_state.rs  error.rs  lib.rs  logging_table.rs  main.rs
src/logging_table/: error.rs  logging_table.rs  mod.rs
src/routes/: alive.rs  mod.rs  query.rs
src/utils/: aws.rs  constants.rs  datafusion.rs  mod.rs  tracing.rs
