[package]
name = "cloudwatch-viewer-web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-cloudwatchlogs = "1.66"
axum = { version = "0.7", features = ["macros"] }
color-eyre = "0.6.3"
chrono = { version = "0.4", features = ["serde"] }
datafusion = "44"
dotenvy = "0.15.7"
futures-util = "0.3"
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features= ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["trace", "cors", "trace"] }
thiserror = "2"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.11.26", features = ["json"] }